# nova

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  run.ps1  vcpkg.json
include/: BPMaterial.h  Camera.h  ComputeProgram.h  ContributionFunc.h  EventData.h  FontRenderer.h  FrameScene.h  GLSL.h  Gizmo.h  MainScene.h  MatrixStack.h  Mesh.h  Program.h  include.h  stb_image.h  utils.h
resources/: digital_shutter.comp  event_processing.comp  text.fsh  text.vsh  texture.fsh  texture.vsh
src/: AppContext.hh  Camera.cpp  ComputeProgram.cpp  DataAcquisition.hh  EventData.cpp  EventData.hh  FontRenderer.cpp  GLSL.cpp  GUI.hh  Gizmo.cpp  MainScene.cpp  MatrixStack.cpp  Mesh.cpp  ParameterStore.hh  Program.cpp  RenderTarget.hh  SpinningCube.hh  main.cc  main.cpp  pch.hh  utils.cpp
